# skivvy-rawplug

./: configure.ac  rawplug-test.sh  rawplug.conf.example
docs/: manual.text
plugins/: rawplug-api.php  rawplug-api.sh  rawplug-cpp-headers.cpp  rawplug-cpp.sh  rawplug-rss.php  rawplug-sdcv.sh  rawplug-test-00.sh
src/: Makefile.am  plugin-grabber.cpp  plugin-rawplug.cpp
src/include/skivvy/: plugin-rawplug.h
src/include/skivvy-rawplug/: plugin-rawplug.h
